# DocuMind

./: .gitignore  README.md  client.py  config.py  ingest.py  main.py  pyproject.toml  server.py
scripts/: ruff_check.sh  smoke_ingest.sh
